# photon-mlx

./: .env.example  .env.example.md  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  spec.md  tasks.md
app/: photon_app.py
baseline_reporag/: checkpoints.py  citation.py  citation_eligibility.py  cli.py  comparison.py  config.py  contracts.py  logger.py  photon_pipeline.py  pipeline.py  pipeline_factory.py  profiler.py  server.py
bench/: freeze_benchmark.py  issue61_prune_batch.py  issue79_working_memory_compression_bench.py  kv_cache_speedup.py  run_all.py
configs/: __init__.py  baseline.yaml  eval.yaml  eval_qwen_model_matrix.yaml  eval_qwen_model_matrix_400.yaml  institutional_docs.yaml  institutional_docs_photon.yaml  institutional_docs_photon_retrain.yaml  institutional_docs_photon_retrain_heading_on.yaml  photon_600m_paper.yaml  photon_long_context.yaml  photon_small.yaml  photon_test_minimal.yaml  photon_tiny.yaml  photon_tiny_recgen.yaml
demo/: run_demo.py  scenarios.py
docs/: code_review_checklist.md  deployment.md  development_notes.md  document_collection.md  evaluation.md  issue-175-synonym-corpus-analysis.md  photon_standalone.md  photon_technical_overview.md  playground.md  release_checklist.md  release_notes_v0.1.0.md  release_plan_v0.1.0.md  troubleshooting.md  tutorial.md
evals/: grader_template.py  institutional_multi_turn_eval_schema.md  institutional_static_eval_schema.md  multi_turn_eval_schema.md  static_eval_schema.md  stress_eval_schema.md
examples/: document_urls.sample.md
photon_mlx/: __init__.py  blocks.py  checkpoint.py  cli.py  data.py  inference.py  loss.py  model.py  optimize.py  safe_recgen.py  session.py  trainer.py
reports/: answerable_classification.md  baseline_20q_report.json  baseline_full_mt_report.json  baseline_full_static_report.json  baseline_sample_report.json  benchmark_freeze.json  benchmark_report.md  bge_embedding_eval.md  bge_reranker_eval.md  commandmate_photon_mt_eval.md  failure_case_template.md  failure_cases.md  gate2_judgment.md  gate2_judgment_v2.md  gate2_judgment_v3.md  gate2_judgment_v4_final.md  gate2_judgment_v5_post_s7001.md  gate3_judgment.md  institutional_baseline_static.md  institutional_chunker_size_ab.md  institutional_photon_mt_eval.md  institutional_photon_mt_eval_v2.md  institutional_photon_mt_eval_v2_3k.md  institutional_photon_mt_eval_v2_3k.summary.json  institutional_photon_mt_eval_v2_3k_bug_check.md  institutional_retrieval_ab.md  issue-55-long-context.md  issue-61-prune-batch.json  issue-61-prune-batch.md  issue-80-aggregation-bench.md  issue14_final_judgment.md  issue_103_opt_in_benefit_eval.md  issue_103_pre_merge_eval.md  issue_104_hybrid_mini_ab.md  issue_89_bge_reranker_retry_abort.md  issue_92_post_merge_eval.md  phase2_cross_domain_validation.md  qwen_model_matrix_20260428_400cmp_report.md  qwen_model_matrix_20260428_400cmp_summary.json  safe_recgen_analysis.md  (+3 more)
scripts/: __init__.py  _corpus_core.py  _graph_bench_core.py  _grid_search_core.py  _setup_ruri_models.py  aggregate_institutional_baseline.py  analyze_institutional_corpus_for_synonyms.py  build_heading_graph.py  build_indexes.py  build_symbol_graph.py  ci_eval_check.py  collect_documents.py  compare_baseline_photon.py  compare_generators.py  document_collection.py  eval_institutional_citations.py  eval_retrieval_recall.py  expand_corpus.sh  export_report.py  extract_synonym_candidates.py  generate_commandmate_eval_set.py  generate_eval_sets.py  generate_institutional_eval_set.py  generate_institutional_training_corpus.py  generate_photon.py  generate_training_corpus.py  graph_expansion_bench.py  ingest_repo.py  measure_fallback_recall.py  measure_memory.py  measure_specific_phrases.py  regrade_eval_with_refusal.py  retrieval_grid_search.py  run_baseline_eval.py  run_multi_turn_eval.py  run_stress_eval.py  score_scenario2_comparison.py  summarize_eval_matrix.py  tokenize_institutional_corpus.py  train_photon.py  (+1 more)
tests/: test_aggregate_institutional.py  test_build_heading_graph_script.py  test_build_symbol_graph_cli.py  test_checkpoint_download.py  test_chunk_store_thread_safety.py  test_ci_eval_check.py  test_citation_eligibility.py  test_cli_use_photon.py  test_compare_baseline_photon.py  test_compare_generators.py  test_comparison.py  test_demo_scenarios.py  test_document_collection.py  test_eval_institutional_citations.py  test_eval_institutional_citations_cli.py  test_eval_retrieval_recall_script.py  test_generate_institutional_eval_set_cli.py  test_generate_institutional_training_corpus.py  test_generate_training_corpus.py  test_generator_qwen_thinking.py  test_graph_expansion_bench.py  test_graph_expansion_bench_smoke.py  test_heading_graph.py  test_heading_graph_chunker_contract.py  test_ingest_repo_resolve_commit.py  test_institutional_corpus.py  test_institutional_generator.py  test_institutional_llm_client.py  test_institutional_multi_turn.py  test_institutional_prompt.py  test_institutional_writer.py  (+26 more)
(+510 files in other folders)
