[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photon-rag"
version = "0.1.0"
description = "PHOTON-enhanced multi-turn RepoRAG for local repositories and markdown corpora."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Kewton" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi",
    "huggingface_hub",
    "httpx",
    "mlx",
    "mlx-lm",
    "numpy",
    "python-dotenv",
    "pyyaml",
    "rank-bm25",
    "sentence-transformers",
    "torch",
    "tqdm",
    "transformers",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "build",
    "pytest",
    "ruff",
]
eval = [
    "httpx",
    "tqdm",
]
server = [
    "fastapi",
    "uvicorn[standard]",
]

[project.scripts]
photon-rag = "baseline_reporag.cli:main"
baseline-reporag = "baseline_reporag.cli:main"
baseline-reporag-server = "baseline_reporag.server:main"

[tool.setuptools.packages.find]
include = [
    "baseline_reporag*",
    "configs*",
    "photon_mlx*",
    "torch_ref*",
    "scripts*",
]
exclude = [
    "baseline_reporag.tests*",
    "photon_mlx.tests*",
    "torch_ref.tests*",
]

[tool.setuptools.package-data]
configs = ["*.yaml"]

[tool.pytest.ini_options]
# DR3-003: testpaths lists every directory previously surfaced by implicit
# pytest discovery from the repo root.  ``bench/tests`` and ``evals/tests``
# are not part of the documented quality-gate command in CLAUDE.md, but they
# were collected by ``pytest --collect-only`` at the repo root before this
# change; preserving them here avoids silently dropping pre-existing tests.
testpaths = [
    "tests",
    "baseline_reporag/tests",
    "photon_mlx/tests",
    "torch_ref/tests",
    "bench/tests",
    "evals/tests",
]
markers = [
    "integration: integration tests requiring real PhotonModel + checkpoint",
    "slow: tests taking >5 seconds",
]
