[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photon-rag"
version = "0.1.0"
description = "PHOTON-enhanced multi-turn RepoRAG for local repositories and markdown corpora."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Kewton" }]
keywords = ["rag", "multi-turn", "retrieval", "mlx", "streamlit", "photon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi",
    "huggingface_hub",
    "httpx",
    "mlx",
    "mlx-lm",
    "numpy",
    "python-dotenv",
    "pyyaml",
    "rank-bm25",
    "sentence-transformers",
    "torch",
    "tqdm",
    "transformers",
    "uvicorn[standard]",
]

[project.optional-dependencies]
photon = [
    "mlx",
    "numpy",
    "pyyaml",
    "torch",
    "transformers",
    "tqdm",
]
rag = [
    "mlx-lm",
    "rank-bm25",
    "sentence-transformers",
]
app = [
    "streamlit",
]
dev = [
    "build",
    "pytest",
    "ruff",
]
eval = [
    "httpx",
    "tqdm",
]
server = [
    "fastapi",
    "uvicorn[standard]",
]

[project.urls]
Homepage = "https://github.com/Kewton/photon-mlx"
Repository = "https://github.com/Kewton/photon-mlx"
Issues = "https://github.com/Kewton/photon-mlx/issues"
Documentation = "https://github.com/Kewton/photon-mlx/tree/main/docs"

[project.scripts]
photon-rag = "baseline_reporag.cli:main"
baseline-reporag = "baseline_reporag.cli:main"
baseline-reporag-server = "baseline_reporag.server:main"
photon-train = "photon_mlx.cli:train_main"
photon-generate = "photon_mlx.cli:generate_main"

[tool.setuptools.packages.find]
include = [
    "baseline_reporag*",
    "configs*",
    "photon_mlx*",
    "scripts*",
    "torch_ref*",
]
exclude = [
    "baseline_reporag.tests*",
    "photon_mlx.tests*",
    "torch_ref.tests*",
]

[tool.setuptools.package-data]
configs = ["*.yaml"]

[tool.pytest.ini_options]
# DR3-003: testpaths lists every directory previously surfaced by implicit
# pytest discovery from the repo root.  ``bench/tests`` and ``evals/tests``
# are not part of the documented quality-gate command in CLAUDE.md, but they
# were collected by ``pytest --collect-only`` at the repo root before this
# change; preserving them here avoids silently dropping pre-existing tests.
testpaths = [
    "tests",
    "baseline_reporag/tests",
    "photon_mlx/tests",
    "torch_ref/tests",
    "bench/tests",
    "evals/tests",
]
markers = [
    "integration: integration tests requiring real PhotonModel + checkpoint",
    "slow: tests taking >5 seconds",
]
